--- a/lambda/package.json
+++ b/lambda/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.119",
     "typescript": "^5.1.3"
   }
 }
